# Vantage-Nodes

./: LICENSE  README.md  __init__.py  block_swap.py  gguf.py  images.py  krea2.py  latents.py  loader.py  prompt_scene_router.py  pyproject.toml  qwen_tts_downloader.py  qwen_tts_lazy.py  qwen_tts_multi_speaker.py  qwen_tts_patches.py  qwen_tts_speaker_bank.py  qwen_tts_utils.py  qwen_tts_voice_clone_prompt.py  qwen_tts_voice_design.py  qwen_tts_voice_storage.py  requirements.txt  utils.py
qwen_tts/: __init__.py
qwen_tts/core/: __init__.py
qwen_tts/core/models/: modeling_qwen3_tts.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/inference/: qwen3_tts_model.py  qwen3_tts_tokenizer.py
web/: image_loader.js  prompt_scene_router.js
