[project]
name = "Vantage-Nodes"
description = "collection of utilities node from Vantage with AI"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["gguf>=0.13.0", "sentencepiece", "protobuf"]

[project.urls]
Repository = "https://github.com/vantagewithai/Vantage-Nodes"
"Bug Tracker" = "https://github.com/vantagewithai/Vantage-Nodes/issues"

[tool.comfy]
PublisherId = "vantagewithai"
DisplayName = "Vantage-Nodes"
Icon = ""
